--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <groupId>com.learn.project</groupId>
-    <artifactId>mall-admin-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>mall</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>mall</name>
+    <description>mall-聚合服务</description>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
+    <modules>
+        <!--优惠券服务-->
+        <module>mall-coupon</module>
+        <!--会员服务-->
+        <module>mall-member</module>
+        <!--订单服务-->
+        <module>mall-order</module>
+        <!--商品服务-->
+        <module>mall-product</module>
+        <!--库存服务-->
+        <module>mall-ware</module>
+    </modules>
 </project>
