feat(代码生成器): 引入renren-generator开源项目，用于代码生成。
生成的代码格式与renren-fast和renren-fast-vue代码格式相同

--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,7 @@
         <module>mall-ware</module>
         <!--人人开源-后台管理系统-后端代码-->
         <module>renren-fast</module>
+        <!--人人开源-代码生成器-与人人开源后台管理系统相搭配-->
+        <module>renren-generator</module>
     </modules>
 </project>
