--- a/mall-product/pom.xml
+++ b/mall-product/pom.xml
@@ -18,6 +18,13 @@
         <spring-cloud.version>2021.0.0</spring-cloud.version>
     </properties>
     <dependencies>
+        <!--引入公共模块-->
+        <dependency>
+            <groupId>com.learn.project</groupId>
+            <artifactId>mall-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
