feat(ware): 使用逆向工程生成仓储服务代码

--- a/mall-ware/pom.xml
+++ b/mall-ware/pom.xml
@@ -19,6 +19,13 @@
         <spring-cloud.version>2021.0.0</spring-cloud.version>
     </properties>
     <dependencies>
+        <!--公共模块-->
+        <dependency>
+            <groupId>com.learn.project</groupId>
+            <artifactId>mall-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
