--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,17 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <groupId>com.learn.project</groupId>
-    <artifactId>mall</artifactId>
+    <artifactId>mall-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mall</name>
     <description>mall-聚合服务</description>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.1</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -20,6 +27,9 @@
         <commons-io.version>2.11.0</commons-io.version>
         <spring-web.version>5.3.13</spring-web.version>
         <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
+        <spring-cloud-alibaba.version>2.2.7.RELEASE</spring-cloud-alibaba.version>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
     </properties>
 
     <modules>
@@ -43,6 +53,17 @@
 
     <dependencyManagement>
         <dependencies>
+
+
+            <!--spring-cloud-alibaba-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!--Mybatis-plus-->
             <dependency>
                 <groupId>com.baomidou</groupId>
