--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>mall</artifactId>
+        <artifactId>mall-parent</artifactId>
         <groupId>com.learn.project</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -64,17 +64,9 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <!--nacos-config-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
 
-        <!--nacos-discovery-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
+
+
     </dependencies>
 
 </project>
