feat(*): 整合Nacos作为注册中心及修复bug
1. 整合Nacos作为注册中心并修复bug
2. 修复org.springframework.context.annotation.ConflictingBeanDefinitionException(将MapperScan扫描限定到dao包避免扫描其他包，导致bean名重复)

--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -64,7 +64,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-
+        <!--nacos-discovery-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
 
     </dependencies>
