feat(*): SpringBoot整合Nacos作为配置中心

--- a/mall-coupon/src/main/resources/application.yml
+++ b/mall-coupon/src/main/resources/application.yml
@@ -16,3 +16,8 @@ mybatis-plus:
     db-config:
       #配置数据库主键 自增
       id-type: auto
+
+#打印日志
+logging:
+  level:
+    com.alibaba.cloud.nacos.client: debug
