--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -82,6 +82,17 @@
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
 
+        <!--nacos-config 配置中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <!--引入starter-bootstrap 读取bootstrap.properties配置文件-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
