--- a/renren-generator/src/main/resources/application.yml
+++ b/renren-generator/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     #MySQL配置
     driverClassName: com.mysql.cj.jdbc.Driver
     #需要生成代码的数据库
-    url: jdbc:mysql://192.168.249.4:3306/mall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.249.4:3306/mall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
 #    password: root
