--- a/renren-generator/src/main/resources/generator.properties
+++ b/renren-generator/src/main/resources/generator.properties
@@ -4,13 +4,13 @@ mainPath=com.learn.project
 #\u5305\u540D
 package=com.learn.project.mall
 #\u6A21\u5757\u540D
-moduleName=product
+moduleName=ware
 #\u4F5C\u8005
 author=chenfuyuan
 #Email
 email=chenfuyuan0713@163.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
-tablePrefix=pms_
+tablePrefix=wms_
 
 #\u7C7B\u578B\u8F6C\u6362\uFF0C\u914D\u7F6E\u4FE1\u606F
 tinyint=Integer
