fix(admin): 修改application.yml中的application.name。
1. application.yml中的application.name会覆盖bootstrap.yml中的application.name。
2. 从 renren-fast修改为admin。以前的配置会读取renren-fast.yml文件，现在会读取admin.yml文件。

--- a/renren-fast/src/main/resources/application-dev.yml
+++ b/renren-fast/src/main/resources/application-dev.yml
@@ -37,7 +37,7 @@ spring:
             discovery:
                 server-addr: 192.168.249.4:8848
     application:
-        name: renren-fast
+        name: admin
 
 ##多数据源的配置
 #dynamic:
