--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -18,3 +18,6 @@ mybatis-plus:
     db-config:
       #配置数据库主键 自增
       id-type: auto
+      logic-delete-field: show_status
+      logic-delete-value: 0
+      logic-not-delete-value: 1
