--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -12,6 +12,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.4.RELEASE</version>
+		<relativePath/>
 	</parent>
 
 	<properties>
@@ -86,6 +87,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 
 		<dependency>
