style(common): 引入自己写的工具类模块依赖

--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -14,6 +14,12 @@
 
 
     <dependencies>
+        <!--upTool-->
+        <dependency>
+            <groupId>com.upTool</groupId>
+            <artifactId>upTool-core</artifactId>
+        </dependency>
+
         <!--Mybatis-plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
