refactor(product): 对各个Entitiy添加新增的数据库必要字段，并结合mybatis-plus和p6spy实现sql分析
1. 添加必要字段is_deltete(是否删除)、gmt_create(创建时间) 、gmt_modified(修改时间) timestamp
2. 结合mybatis-plus和p6spy实现sql分析

--- a/mall-product/src/main/resources/bootstrap.yml
+++ b/mall-product/src/main/resources/bootstrap.yml
@@ -16,6 +16,9 @@ spring:
           - dataId: global.yml
             group: global
             refresh: true
+          - dataId: spy.properties
+            group: global
+
         #扩展配置
         extension-configs:
           - dataId: datasource.yml
