--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -14,6 +14,13 @@
 
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/p6spy/p6spy 用于分析sql -->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>${p6spy.version}</version>
+        </dependency>
+
         <!--upTool-->
         <dependency>
             <groupId>com.upTool</groupId>
