--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 # DataSource Config
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.249.4:3306/mall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    url: jdbc:p6spy:mysql://192.168.249.4:3306/mall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
   cloud:
@@ -10,6 +10,13 @@ spring:
       discovery:
         server-addr: 192.168.249.4:8848
 
+logging:
+  level:
+    com.alibaba.cloud.nacos.client: debug
+    org.sysu.rain.Mapper: debug
+    com.kaven.mybatisplus.dao: trace
+  pattern:
+    console: '%p%m%n'
 
 mybatis-plus:
   #配置mapper.xml扫描路径
@@ -18,5 +25,3 @@ mybatis-plus:
     db-config:
       #配置数据库主键 自增
       id-type: auto
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
