refactor(thirdparty): 创建第三方服务模块，引入阿里云OSS，实现获取OSS签名功能
1. 创建第三方服务模块
2. 网关处添加第三方服务路由
3. 引入阿里云OSS，实现获取OSS签名功能

--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -44,6 +44,13 @@ spring:
           filters:
             - RewritePath=/api/?(?<segment>.*), /$\{segment}
 
+        - id: third-party    #第三方服务
+          uri: lb://thirdparty
+          predicates:
+            - Path=/api/thirdparty/**
+          filters:
+            - RewritePath=/api/thirdparty/?(?<segment>.*), /$\{segment}
+
         - id: admin    #后台服务
           uri: lb://admin
           predicates:
