fix(gateway): 修复HttpServlet报错问题

--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -32,6 +32,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!--gateway网关-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
