--- a/mall-thrid-party/pom.xml
+++ b/mall-thrid-party/pom.xml
@@ -24,32 +24,10 @@
             <artifactId>aliyun-oss-spring-boot-starter</artifactId>
         </dependency>
 
-        <!--mall-common-->
         <dependency>
             <groupId>com.learn.project</groupId>
-            <artifactId>mall-common</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.baomidou</groupId>
-                    <artifactId>mybatis-plus-boot-starter</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>mall-common-web</artifactId>
         </dependency>
 
-        <!--spring-boot-web-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!--openfeign-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
     </dependencies>
 </project>
