--- a/mall-common/mall-common-core/pom.xml
+++ b/mall-common/mall-common-core/pom.xml
@@ -12,12 +12,14 @@
     <artifactId>mall-common-core</artifactId>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <scope>provided</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
+
+
 
         <!--upTool-->
         <dependency>
