feat(*): 时间格式化 后端->前端改为通过application.yml jackson.date-format配置

--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.249.4:8848
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 logging:
   level:
@@ -25,3 +28,4 @@ mybatis-plus:
     db-config:
       #配置数据库主键 自增
       id-type: auto
+
