fix(gateway): 解决找不到product服务问题，并记录笔记

--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -25,6 +25,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.learn.project</groupId>
+            <artifactId>mall-common-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
