fix(thrid-party): 修复因为mall-common模块结构调整，引发的没有导入nacos依赖，导致没有注册服务问题

--- a/mall-thrid-party/pom.xml
+++ b/mall-thrid-party/pom.xml
@@ -29,5 +29,9 @@
             <artifactId>mall-common-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.learn.project</groupId>
+            <artifactId>mall-common-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
