feat(common\web): 全局异常控制，添加ValidationException异常控制

--- a/mall-common/mall-common-web/pom.xml
+++ b/mall-common/mall-common-web/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>mall-common-web</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.upTool</groupId>
+            <artifactId>upTool-core</artifactId>
+        </dependency>
         <!--spring-starter-web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
